[package]
name = "docs"
version = "0.1.0"
authors = ["Max Mindlin <maxmindlin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.11.0"
reqwest = { version = "0.10.4", features = ["blocking"] }
prettytable-rs = "^0.8"